--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -62,7 +62,7 @@
                     <div class="row info">
                         <div class="col-12 col-xl-6 order-1 order-xl-1 ps-xl-0">
                             <h1 id="muni" class="text-center">WHAT IS MUNI?</h1>
-                            <p class="par1">Undeterred by even the most dangerous and threatening of obstacles,
+                            <p class="par">Undeterred by even the most dangerous and threatening of obstacles,
                                 Muni
                                 scouts the world with boundless enthusiasm and a cheerful spirit. A yordle with an
                                 unwavering sense of
@@ -88,7 +88,7 @@
                 <div class="container-fluid">
                     <div class="row info">
                         <div class="col-12 col-xl-6 order-1 order-xl-2 pe-xl-0">
-                            <p class="par2">Despite her genuinely warm personality, something switches off
+                            <p class="par">Despite her genuinely warm personality, something switches off
                                 inside Muni's
                                 mind during combat so that the lives she must end while on patrol do not burden her.
                                 Even as a young
