--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -42,10 +42,10 @@
                             <p id="msLength"></p>
                         </div>
                         <div class="rand-movie-show__info">
-                            <p id="msRating"></p>
+                            <p id="msGenre"></p>
                             <p id="msDate"></p>
                         </div>
-                        <button class="button" id="msBtn">REROLL MOVIE / TV SHOW</button>
+                        <button class="button" id="msBtn">ANOTHER MOVIE / TV SHOW</button>
                     </div>
                 </div>
             </section>
