--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -45,7 +45,7 @@
                             <p id="msGenre"></p>
                             <p id="msDate"></p>
                         </div>
-                        <button class="button" id="msBtn">ANOTHER MOVIE / TV SHOW</button>
+                        <a class="button" id="msBtn">ANOTHER MOVIE / TV SHOW</a>
                     </div>
                 </div>
             </section>
