--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 
 <head>
+    <!-- METATAGS -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- OPEN GRAPH METATAGS -->
+    <meta property="og:url" content="https://th3riv.github.io/Projects/API-Project/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bored No More!">
+    <meta property="og:description" content="Your best friend when it comes to boredom!">
+    <meta property="og:image" content="https://i.gyazo.com/62f43b0124b8316964994c556ecd2a70.png">
+
+    <!-- CSS AND STYLING -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -55,9 +64,9 @@
     </main>
 
     <footer>
-        <!-- <attribution>
+        <div class="attribution">
             <p class="credit"> "This product uses the TMDB API but is not endorsed or certified by TMDB."</p>
-        </attribution> -->
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
