--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -65,7 +65,7 @@
 
     <footer>
         <div>
-            <p class="credit"> "This product uses the TMDB API but is not endorsed or certified by TMDB."</p>
+            <p>"This product uses the TMDB API but is not endorsed or certified by TMDB."</p>
         </div>
     </footer>
 
