--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <div>
+        <div class="credit">
             <p>"This product uses the TMDB API but is not endorsed or certified by TMDB."</p>
         </div>
     </footer>
