--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
-                        <a href="index.html"><img class="caroImg" src="Placeholders/work.jpg" class="d-block w-100"
-                                alt="work"></a>
+                        <a href="https://th3riv.github.io/Projects/API-Project/"><img class="caroImg" src="https://lh3.googleusercontent.com/V6COKHxu6IgmyiavkpSJkfgVP9ZtF5sM-RptXGyOv6RSsUzfH32QK96ghgc49GoZtQsfm6EogkFMqv0r5rNG_Z2YJn2nwCmT3mlM-aX83PD5lJGxcVa9CA6fOl8nEu261sKMbvBiMo4ZyCzLOT25mcyKISCl_eoZnsjSG2FSNow4fH9KFvw6lUnGXEEwFu6GZnk2MgimjANEBaVekrvUCZfYP5PYMx6ur4Y12GMiv-G2An-Edyji9HRp7rg5GMMomKPuzmeQcvVz1n2OoZ2Hcsfwumdxlpnz71-Ik-bsAORSRC9Yi6j3JDXUYASGJeq0rYk0ZSYg0qgRVpjDHmKZay0VjecOQMwMF7iwyqkbH6b_qqtxrSg6g5MoZAa0ldpdd3eL8MGFDESHl_HfW2OmJ6_Vv-EyIa8Rj9E6BgatQiQFaJd-YgXWXEG_MPUo3IvNZrOz4mD_I_s95yuLU-9GL3zfOaAj9PwT75T5cdIn8Pog3KAgRUvqB7gDRY8c7FQpeMc8_NFXN5XYT7HVGWBAvqSu2Kr81PSrRIWF3zNIWdPctTbRkpNWaoN3QysQygui_tZ61yZOkAyChGjt2LP81CUCpV1a_VLR-j-mprPapRjoUbztG-CK0kZEV3SownqLxvuGlxGxumiaVCaTpIRPuKdkaW7H7pH6F5IluLR-So68zDxT74KSXy8aCqya-M60oqauyiV5i0zK_s2eriHXxFzR973hfjP-qw_trBLgcYJUjet6ueEnROXIiJu12sbN35hN2V60IKcsyygTMJ_nXdY3LkvjyJebUlS74K0bmUTC-iN0cYHzyoa9iCi2t1G1iRhtpv59H3NpiK9bFn-HCzDkaeFTYHi_G7AMZtOjFNbC_JvR-WW1KmKR3O3rTTwrwQGdI__YVt_iPWFgBircAEzaCj-duY9NP-Y7jF_mpUtroM9oMXDpRPhI3SmBAd6C0pSyUkN0YwJewweWGu4LIIJPC7IXxe7H0GVlRjMnhr6QGZrUrqoDsM6Sfw=w1350-h600-no?authuser=0" class="d-block w-100"
+                                alt="API based project Bored No More!"></a>
                         <div class="carousel-caption d-md-block">
-                            <h2 class="slideLabel">UNTITLED YET</h2>
-                            <p class=" d-none d-sm-block slideText">No description yet.</p>
+                            <h2 class="slideLabel">Bored No More!</h2>
+                            <p class=" d-none d-sm-block slideText">API usage based project with the intention to provide you alternative to boredom.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
