--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -25,14 +25,14 @@
 
 <body>
 
-    <!-- <header>
-        <nav>
-
-        </nav>
-    </header> -->
+    <header>
+        <a href="index.html">
+            <h1 class="main-heading heading">STOP BEING BORED!</h1>
+        </a>
+    </header>
 
     <main>
-        <h1 class="main-heading heading">STOP BEING BORED!</h1>
+
 
         <article class="flex-center-column">
 
@@ -55,6 +55,30 @@
                             <p id="msDate"></p>
                         </div>
                         <a class="button" id="msBtn">ANOTHER MOVIE / TV SHOW</a>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="rand-book">
+                <h2 class="rand-book__heading heading">Don't like movies? Here's a book to help!</h2>
+                <div class="rand-book__main">
+                    <div class="rand-book__section">
+                        <a href="" target="_blank" id="bLink"><img class="rand-book__poster" id="bPoster" src=""
+                                alt="movie poster"></a>
+                    </div>
+                    <div class="rand-book__section">
+                        <h3 class="rand-book__title heading" id="bTitle"></h3>
+                        <p class="rand-book__description" id="bDesc">Descriptions currently unavailable due to lack of
+                            in the database... >:(</p>
+                        <div class="rand-book__info">
+                            <p id="bAuthor"></p>
+                            <p id="bGenre"></p>
+                        </div>
+                        <div class="rand-book__info">
+                            <p id="bPubl"></p>
+                            <p id="bLength"></p>
+                        </div>
+                        <a class="button" id="bBtn">ANOTHER RANDOM BOOK</a>
                     </div>
                 </div>
             </section>
