--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="rand-book__section">
                         <h3 class="rand-book__title heading" id="bTitle"></h3>
-                        <p class="rand-book__description" id="bDesc">Descriptions currently unavailable due to lack of
-                            in the database... >:(</p>
+                        <p class="rand-book__description" id="bDesc">Descriptions currently unavailable, but feel free
+                            to click on the book cover image and check it out!</p>
                         <div class="rand-book__info">
                             <p id="bAuthor"></p>
                             <p id="bGenre"></p>
@@ -89,7 +89,7 @@
 
     <footer>
         <div class="credit">
-            <p>"This product uses the TMDB API but is not endorsed or certified by TMDB."</p>
+            <p>"This product uses the TMDB and Open Library API but is not endorsed or certified by them."</p>
         </div>
     </footer>
 
