--- a/Projects/API-Project/index.html
+++ b/Projects/API-Project/index.html
@@ -68,8 +68,7 @@
                     </div>
                     <div class="rand-book__section">
                         <h3 class="rand-book__title heading" id="bTitle"></h3>
-                        <p class="rand-book__description" id="bDesc">Descriptions currently unavailable, but feel free
-                            to click on the book cover image and check it out!</p>
+                        <p class="rand-book__description" id="bDesc"></p>
                         <div class="rand-book__info">
                             <p id="bAuthor"></p>
                             <p id="bGenre"></p>
