--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
                     <li class="nav-item"><a class="nav-link navlink" href="#caro">PROJECTS</a></li>
                     <li class="nav-item"><a class="nav-link navlink"
                             href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#contactForm" id="contactLink">CONTACT</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <main>
+
         <div class="container-fluid text-center about" id="about">
             <div class="text">
                 <ul>
@@ -76,11 +78,13 @@
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
-                        <a href="https://th3riv.github.io/Projects/API-Project/"><img class="caroImg" src="https://lh3.googleusercontent.com/V6COKHxu6IgmyiavkpSJkfgVP9ZtF5sM-RptXGyOv6RSsUzfH32QK96ghgc49GoZtQsfm6EogkFMqv0r5rNG_Z2YJn2nwCmT3mlM-aX83PD5lJGxcVa9CA6fOl8nEu261sKMbvBiMo4ZyCzLOT25mcyKISCl_eoZnsjSG2FSNow4fH9KFvw6lUnGXEEwFu6GZnk2MgimjANEBaVekrvUCZfYP5PYMx6ur4Y12GMiv-G2An-Edyji9HRp7rg5GMMomKPuzmeQcvVz1n2OoZ2Hcsfwumdxlpnz71-Ik-bsAORSRC9Yi6j3JDXUYASGJeq0rYk0ZSYg0qgRVpjDHmKZay0VjecOQMwMF7iwyqkbH6b_qqtxrSg6g5MoZAa0ldpdd3eL8MGFDESHl_HfW2OmJ6_Vv-EyIa8Rj9E6BgatQiQFaJd-YgXWXEG_MPUo3IvNZrOz4mD_I_s95yuLU-9GL3zfOaAj9PwT75T5cdIn8Pog3KAgRUvqB7gDRY8c7FQpeMc8_NFXN5XYT7HVGWBAvqSu2Kr81PSrRIWF3zNIWdPctTbRkpNWaoN3QysQygui_tZ61yZOkAyChGjt2LP81CUCpV1a_VLR-j-mprPapRjoUbztG-CK0kZEV3SownqLxvuGlxGxumiaVCaTpIRPuKdkaW7H7pH6F5IluLR-So68zDxT74KSXy8aCqya-M60oqauyiV5i0zK_s2eriHXxFzR973hfjP-qw_trBLgcYJUjet6ueEnROXIiJu12sbN35hN2V60IKcsyygTMJ_nXdY3LkvjyJebUlS74K0bmUTC-iN0cYHzyoa9iCi2t1G1iRhtpv59H3NpiK9bFn-HCzDkaeFTYHi_G7AMZtOjFNbC_JvR-WW1KmKR3O3rTTwrwQGdI__YVt_iPWFgBircAEzaCj-duY9NP-Y7jF_mpUtroM9oMXDpRPhI3SmBAd6C0pSyUkN0YwJewweWGu4LIIJPC7IXxe7H0GVlRjMnhr6QGZrUrqoDsM6Sfw=w1350-h600-no?authuser=0" class="d-block w-100"
-                                alt="API based project Bored No More!"></a>
+                        <a href="https://th3riv.github.io/Projects/API-Project/"><img class="caroImg"
+                                src="https://lh3.googleusercontent.com/V6COKHxu6IgmyiavkpSJkfgVP9ZtF5sM-RptXGyOv6RSsUzfH32QK96ghgc49GoZtQsfm6EogkFMqv0r5rNG_Z2YJn2nwCmT3mlM-aX83PD5lJGxcVa9CA6fOl8nEu261sKMbvBiMo4ZyCzLOT25mcyKISCl_eoZnsjSG2FSNow4fH9KFvw6lUnGXEEwFu6GZnk2MgimjANEBaVekrvUCZfYP5PYMx6ur4Y12GMiv-G2An-Edyji9HRp7rg5GMMomKPuzmeQcvVz1n2OoZ2Hcsfwumdxlpnz71-Ik-bsAORSRC9Yi6j3JDXUYASGJeq0rYk0ZSYg0qgRVpjDHmKZay0VjecOQMwMF7iwyqkbH6b_qqtxrSg6g5MoZAa0ldpdd3eL8MGFDESHl_HfW2OmJ6_Vv-EyIa8Rj9E6BgatQiQFaJd-YgXWXEG_MPUo3IvNZrOz4mD_I_s95yuLU-9GL3zfOaAj9PwT75T5cdIn8Pog3KAgRUvqB7gDRY8c7FQpeMc8_NFXN5XYT7HVGWBAvqSu2Kr81PSrRIWF3zNIWdPctTbRkpNWaoN3QysQygui_tZ61yZOkAyChGjt2LP81CUCpV1a_VLR-j-mprPapRjoUbztG-CK0kZEV3SownqLxvuGlxGxumiaVCaTpIRPuKdkaW7H7pH6F5IluLR-So68zDxT74KSXy8aCqya-M60oqauyiV5i0zK_s2eriHXxFzR973hfjP-qw_trBLgcYJUjet6ueEnROXIiJu12sbN35hN2V60IKcsyygTMJ_nXdY3LkvjyJebUlS74K0bmUTC-iN0cYHzyoa9iCi2t1G1iRhtpv59H3NpiK9bFn-HCzDkaeFTYHi_G7AMZtOjFNbC_JvR-WW1KmKR3O3rTTwrwQGdI__YVt_iPWFgBircAEzaCj-duY9NP-Y7jF_mpUtroM9oMXDpRPhI3SmBAd6C0pSyUkN0YwJewweWGu4LIIJPC7IXxe7H0GVlRjMnhr6QGZrUrqoDsM6Sfw=w1350-h600-no?authuser=0"
+                                class="d-block w-100" alt="API based project Bored No More!"></a>
                         <div class="carousel-caption d-md-block">
                             <h2 class="slideLabel">Bored No More!</h2>
-                            <p class=" d-none d-sm-block slideText">API usage based project with the intention to provide you alternative to boredom.</p>
+                            <p class=" d-none d-sm-block slideText">API usage based project with the intention to
+                                provide you alternative to boredom.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
@@ -104,14 +108,37 @@
                 </button>
             </div>
         </div>
+
+        <div id="contact-form">
+            <p id="sent"></p>
+            <form id="contactForm" autocomplete="off" method="post"
+                action="https://public.herotofu.com/v1/4ba95b40-7b00-11ed-ae39-e5d94069e299">
+                <div class="contact-heading">
+                    <h3>Contact</h3>
+                    <button type="button" class="btn-close btn-close-white" aria-label="close contact form"
+                        id="btnClose"></button>
+                </div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
+                <button type="submit" id="formSubmit">Send</button>
+            </form>
+        </div>
+
     </main>
+
     <footer>
         <blockquote class="text-center">Created by RIV - 2022</blockquote>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script src="javascript/color.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script> -->
+    <script src="scripting/color.js"></script>
+    <script src="scripting/contact.js"></script>
 </body>
 
 </html>
