--- a/challenges/Frontend-Mentor/C11-Advice-Generator/index.html
+++ b/challenges/Frontend-Mentor/C11-Advice-Generator/index.html
@@ -19,32 +19,35 @@
 
 </head>
 
-<body>
+<main>
 
-  <div class="container">
-    <h1 class="container__advice-number">Advice #<span id="adviceNumber"></span></h1>
+  <body>
 
-    <p class="container__advice-text" id="adviceText"></p>
+    <div class="container">
+      <h1 class="container__advice-number">Advice #<span id="adviceNumber"></span></h1>
 
-    <picture class="container__divider">
-      <source srcset="images/pattern-divider-desktop.svg" media="(min-width: 525px)" />
-      <img src="images/pattern-divider-mobile.svg" alt="" />
-    </picture>
+      <p class="container__advice-text" id="adviceText"></p>
 
-    <button type="button" class="container__button" id="btn"><img src="images/icon-dice.svg"
-        alt="button to generate a new advice"></button>
-  </div>
+      <picture class="container__divider">
+        <source srcset="images/pattern-divider-desktop.svg" media="(min-width: 525px)" />
+        <img src="images/pattern-divider-mobile.svg" alt="" />
+      </picture>
 
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/TH3RIV" target="_blank">TH3RIV</a>.
+      <button type="button" class="container__button" id="btn"><img src="images/icon-dice.svg"
+          alt="button to generate a new advice"></button>
     </div>
-  </footer>
 
-  <!-- JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <script src="app.js"></script>
+</main>
+<footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/TH3RIV" target="_blank">TH3RIV</a>.
+  </div>
+</footer>
+
+<!-- JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
