--- a/index.html
+++ b/index.html
@@ -49,14 +49,10 @@
                         <p>I am teaching myself to become the best FRONT-END DEVELOPER I can be.</p>
                     </li>
                     <li>
-                        <p>Currently able to work with HTML / CSS / JavaScript.
-                        </p>
-                    </li>
-                    <li>
                         <p>My interests also include sports, movies / TV series, video games and cars.</p>
                     </li>
                     <li>
-                        <p>Feel free to look around and let me know how can I help you!</p>
+                        <p>Feel free to look around and let me know how I CAN HELP YOU!</p>
                     </li>
                 </ul>
             </div>
