--- a/CV/index.html
+++ b/CV/index.html
@@ -30,7 +30,7 @@
                     </p>
                     <img class="photo col" src="images/profile-pic.png" alt="">
                     <ul class="col">
-                        <li><b>Website:</b> <a href="th3riv.github.io">TH3RIV.github.io</a></li>
+                        <li><b>Website:</b> <a href="https://th3riv.github.io">TH3RIV.github.io</a></li>
                         <li><b>Email:</b> kulikauskas.saulius@gmail.com</li>
                         <li><b>Phone:</b> +44 7486 424223</li>
                         <li><b>Location:</b> Kettering, Northamptonshire, United Kingdom</li>
