--- a/CV/index.html
+++ b/CV/index.html
@@ -22,12 +22,19 @@
             <p class="text-center">(Front-End Web Developer)</p>
             <div class="container">
                 <div class="row align-items-center">
-                    <p class="intro col">
-                        Being flexible, I can operate both independently and in a group setting. I am trustworthy,
-                        loyal, and responsible, yet occasionally I may be a bit of a perfectionist.
-                        <br> You can never say you know everything, so I am always willing to learn more. Finding a
-                        place where my work will be appreciated and acknowledged is what I am looking for.
-                    </p>
+                    <div class="intro col">
+                        <p>I've worked in a variety of sectors over the past ten years (banking, customer
+                            service, content creation, logistics). I was able to develop a wide range of skills through
+                            my jobs in several industries, including satisfying customer needs, meeting deadlines, and
+                            KPI fulfilment.
+                        </p>
+                        <p>
+                            I can operate both independently and in a group setting. I am trustworthy,
+                            loyal, responsible, yet occasionally I may be a bit of a perfectionist, but always willing
+                            to learn more. Finding a place where my work will be appreciated and
+                            acknowledged is what I am looking for.
+                        </p>
+                    </div>
                     <img class="photo col" src="images/profile-pic.png" alt="">
                     <ul class="col">
                         <li><b>Website:</b> <a href="https://th3riv.github.io">TH3RIV.github.io</a></li>
@@ -122,20 +129,33 @@
             <div class="container">
                 <h2 class="text-center">Additional Information</h2>
                 <div class="row">
-                    <p class="col">I've worked in a variety of sectors over the past ten years (banking, customer
-                        service, content creation, logistics). I was able to develop a wide range of skills through my
-                        jobs in several industries, including satisfying customer needs, meeting deadlines, and KPI
-                        fulfilment.
-                    </p>
                     <div class="col">
                         <ul>
                             <li>
+                                <h5 class="text-center">Education</h5>
                                 <p class="text-center"><b>Professional bachelor's degree in Banking.</b><br>
                                     <i>Vilnius University of Applied
                                         Sciences (2010-2013)</i>
                                 </p>
                             </li>
                         </ul>
+                    </div>
+                    <div class="col text-center">
+                        <h5>Social Media</h5>
+                        <div class="socials">
+                            <a href="https://www.linkedin.com/in/saulius-kulikauskas-95799a74/"><img
+                                    src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn link"
+                                    class="social-icon"></a>
+                            <a href="http://www.facebook.com/TH3RIV"><img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/800px-Facebook_logo_%28square%29.png"
+                                    alt="Facebook link" class="social-icon"></a>
+                            <a href="https://twitter.com/Rivera2444"><img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png"
+                                    alt="Twitter link" class="social-icon"></a>
+                            <a href="https://www.frontendmentor.io/profile/TH3RIV"><img
+                                    src="https://seeklogo.com/images/F/frontend-mentor-logo-DD85EFE0E9-seeklogo.com.png"
+                                    alt="Front-End Mentor link" class="social-icon"></a>
+                        </div>
                     </div>
                 </div>
             </div>
