--- a/cv/index.html
+++ b/cv/index.html
@@ -36,7 +36,7 @@
                         </p>
                     </div>
                     <img class="photo col" src="images/profile-pic.png" alt="">
-                    <ul class="col">
+                    <ul class="col intro">
                         <li><b>Website:</b> <a href="https://th3riv.github.io">TH3RIV.github.io</a></li>
                         <li><b>Email:</b> kulikauskas.saulius@gmail.com</li>
                         <li><b>Phone:</b> +44 7486 424223</li>
