--- a/cv/index.html
+++ b/cv/index.html
@@ -20,7 +20,7 @@
         <section class="info">
             <h1 class="text-center">Saulius Kulikauskas</h1>
             <p class="text-center">(Front-End Web Developer)</p>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="intro col">
                         <p>I've worked in a variety of sectors over the past ten years (banking, customer
@@ -36,7 +36,7 @@
                         </p>
                     </div>
                     <img class="photo col" src="images/profile-pic.png" alt="">
-                    <ul class="col intro">
+                    <ul class="col">
                         <li><b>Website:</b> <a href="https://th3riv.github.io">TH3RIV.github.io</a></li>
                         <li><b>Email:</b> kulikauskas.saulius@gmail.com</li>
                         <li><b>Phone:</b> +44 7486 424223</li>
@@ -51,7 +51,7 @@
         </section>
         <hr>
         <section class="languages">
-            <div class="container">
+            <div class="container-fluid">
                 <h2 class="text-center">Languages and Frameworks</h2>
                 <div class="row align-items-center justify-content-center">
                     <img class="col lingos" src="images/lingos.png" alt="">
@@ -62,7 +62,7 @@
         </section>
         <hr>
         <section class="projects">
-            <div class="container">
+            <div class="container-fluid">
                 <h2 class="text-center">Notable Projects</h2>
                 <div class="row project">
                     <div class="col">
@@ -126,7 +126,7 @@
         </section>
         <hr>
         <section class="additional_info">
-            <div class="container">
+            <div class="container-fluid">
                 <h2 class="text-center">Additional Information</h2>
                 <div class="row">
                     <div class="col">
