some updates to the website

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                         <p>Feel free to look around and let me know how I CAN HELP YOU!</p>
                     </li>
                 </ul>
+                <div class="resume">
+                    <p>Resume (CV):</p>
+                    <a href="/cv/" class="btn btn-warning" type="button" role="button">View Online</a>
+                    <a href="/cv/files/Saulius-Kulikauskas-CV-WebDev.pdf" class="btn btn-warning" type="button"
+                        role="button">View PDF</a>
+                </div>
             </div>
             <img class="me" src="Placeholders/me.jpg" alt="a beautiful picture of Riv">
         </div>
