--- a/cv/index.html
+++ b/cv/index.html
@@ -71,7 +71,7 @@
                             <a href="https://th3riv.github.io/Projects/Muni/" class="btn btn-primary" role="button">LIVE
                                 SITE</a>
                             <a href="https://github.com/TH3RIV/TH3RIV.github.io/tree/main/Projects/Muni"
-                                class="btn btn-secondary" role="button">CODE REPOSITORY</a>
+                                class="btn btn-secondary" role="button">GITHUB</a>
                         </div>
                     </div>
                     <div class="col">
@@ -89,7 +89,7 @@
                             <a href="https://th3riv.github.io/Projects/API-Project/" class="btn btn-primary"
                                 role="button">LIVE SITE</a>
                             <a href="https://github.com/TH3RIV/TH3RIV.github.io/tree/main/Projects/API-Project"
-                                class="btn btn-secondary" role="button">CODE REPOSITORY</a>
+                                class="btn btn-secondary" role="button">GITHUB</a>
                         </div>
                     </div>
                     <div class="col">
@@ -109,7 +109,7 @@
                             <a href="https://th3riv.github.io/Projects/Redesigns/vMix/" class="btn btn-primary"
                                 role="button">LIVE SITE</a>
                             <a href="https://github.com/TH3RIV/TH3RIV.github.io/tree/main/Projects/Redesigns/vMix"
-                                class="btn btn-secondary" role="button">CODE REPOSITORY</a>
+                                class="btn btn-secondary" role="button">GITHUB</a>
                         </div>
                     </div>
                     <div class="col">
