--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@
 
         <section class="info">
             <h1 class="text-center">Saulius Kulikauskas</h1>
-            <p class="text-center">(Front-End Web Developer)</p>
+            <p class="text-center">(Self Taught Front-End Web Developer)</p>
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="intro col">
